--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@ Es ist wichtig, dass beim Anlegen einer Variable, immer <code>let</code> oder <c
 <div class="title">💡</div>
 </td>
 <td class="content">
-Nachdem du in der console eine Variable definiert hast mit <code>let</code> oder <code>const</code>, kannst du deren Wert einfach abrufen, indem du lediglich den Variablenamen eingibst und Enter drückst.
+Nachdem du in der console eine Variable definiert hast mit <code>let</code> oder <code>const</code>, kannst du deren Wert einfach abrufen, indem du lediglich den Variablennamen eingibst und Enter drückst.
 </td>
 </tr>
 </table>
@@ -800,7 +800,7 @@ Nachdem du in der console eine Variable definiert hast mit <code>let</code> oder
 <p>&#10003; wie ich einer Variable einen Wert zuweise</p>
 </li>
 <li>
-<p>&#10003; welche Variablearten es gibt</p>
+<p>&#10003; welche Variablenarten es gibt</p>
 </li>
 </ul>
 </div>
@@ -822,7 +822,7 @@ Nachdem du in der console eine Variable definiert hast mit <code>let</code> oder
 <h3 id="_zeichenfläche">Zeichenfläche</h3>
 <div class="paragraph">
 <p>Die Zeichenfläche, auf der die Linie entstehen soll, ist ein Rechteck. Dieses Rechteck ist in ein Raster unterteilt (unten im Bild rechts). Ähnlich wie bei einem Blatt Papier mit einem vorgezeichneten Gittermuster. &#160;<br>
-Aus dem Mathematikunterricht kennst du etwas ähnliches, das kartesische Koordinatensystem (unten im Bild links). Im Unterschied zum kartesischen System, ist beim Koordinatensystem unserer Zeichenfläche der 0-Punkt ganz oben Links. Es gibt also nur einen Quadranten, und alle Punkte im Koordinatensystem haben positive x- und y-Werte.</p>
+Aus dem Mathematikunterricht kennst du etwas Ähnliches, das kartesische Koordinatensystem (unten im Bild links). Im Unterschied zum kartesischen System ist beim Koordinatensystem unserer Zeichenfläche der 0-Punkt ganz oben Links. Es gibt also nur einen Quadranten, und alle Punkte im Koordinatensystem haben positive x- und y-Werte.</p>
 </div>
 <div class="imageblock text-center">
 <div class="content">
@@ -1951,7 +1951,7 @@ Wenn der Spieler auf den Kreis klickt:</p>
 <p>&#10003; wie ich Programmteile nur bedingt ausführe</p>
 </li>
 <li>
-<p>&#10003; was die Keywords if und bedeuten</p>
+<p>&#10003; was die Keywords if und else bedeuten</p>
 </li>
 </ul>
 </div>
@@ -2247,7 +2247,7 @@ In diesem Kapitel behandeln wir nicht alle Aspekte von Geltungsbereichen, sonder
 <h2 id="_schleifen">Schleifen</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Eine weiterer wichtiger Baustein von Programmiersprachen sind Schleifen. Damit kann man eine Liste von Befehlen wiederholt ausführen. Es gibt verschiedene Schleifentypen. Die einfachste davon ist die <code>while</code>-Schleife.</p>
+<p>Ein weiterer wichtiger Baustein von Programmiersprachen sind Schleifen. Damit kann man eine Liste von Befehlen wiederholt ausführen. Es gibt verschiedene Schleifentypen. Die einfachste davon ist die <code>while</code>-Schleife.</p>
 </div>
 <div class="sect2">
 <h3 id="_while_schleife">while Schleife</h3>
@@ -2272,8 +2272,8 @@ In diesem Kapitel behandeln wir nicht alle Aspekte von Geltungsbereichen, sonder
 </div>
 </div>
 <div class="paragraph">
-<p>Im Beispiel oben, werden die Zeilen 4 und 5 insgesamt 3 mal nacheinander ausgeführt. Begonnen wird mit <code>counter = 0</code>. Der letzte Durchgang wird mit <code>counter = 2</code> ausgeführt. &#160;<br>
-Der Computer wiederholt also den Schleifeninhalt solange, bis die Abbruchbedingung <code>false</code> ist. Ist diese <code>false</code>, wird die Schleife nicht mehr ausgeführt. Der Computer führt dann die nächste Anweisung nach der Schleife aus, bzw. beendet das Programm, wenn nach der Schleife keine weitere Anweisung folgt.
+<p>Im Beispiel oben werden die Zeilen 4 und 5 insgesamt 3 mal nacheinander ausgeführt. Begonnen wird mit <code>counter = 0</code>. Der letzte Durchgang wird mit <code>counter = 2</code> ausgeführt. &#160;<br>
+Der Computer wiederholt also den Schleifeninhalt so lange, bis die Abbruchbedingung <code>false</code> ist. Ist diese <code>false</code>, wird die Schleife nicht mehr ausgeführt. Der Computer führt dann die nächste Anweisung nach der Schleife aus, bzw. beendet das Programm, wenn nach der Schleife keine weitere Anweisung folgt.
 &#160;<br>
 Die Zeile 3 wird also 4 mal ausgeführt. Denn erst bei deren vierten Ausführung ist die Bedingung <code>false</code> und somit wird der Schleifeninhalt kein weiteres mal ausgeführt.</p>
 </div>
@@ -3112,7 +3112,7 @@ Animiere das Gras so, als ob die Gräser im Wind tanzen.</p>
 </div>
 <div id="footer">
     <div id="footer-text">
-    Zuletzt geändert: 2022-12-10 12:03:38 UTC
+    Zuletzt geändert: 2024-02-26 13:56:55 UTC
     &nbsp;|&nbsp;
     Icons von <a href="https://www.flaticon.com/free-icons/edit" title="edit icons">Freepik - Flaticon</a>
      | <a href="https://github.com/ideadapt/programmieren-lernen-mit-javascript" title="GitHub Repository">Source Code</a>
